--- a/t1.html
+++ b/t1.html
@@ -28,7 +28,7 @@
         <script type="text/javascript" src="Leaflet.TimeDimension/src/leaflet.timedimension.layer.wms_2.js"></script>
         <script type="text/javascript" src="Leaflet.TimeDimension/src/leaflet.timedimension.player.js"></script>
         <script type="text/javascript" src="Leaflet.TimeDimension/src/leaflet.timedimension.control.js"></script>
-        <script type="text/javascript" src="example3.js"></script>
+        <script type="text/javascript" src="example2_goc_xml2.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
     </body>
 </html>
